Minor download card fixes

--- a/gui/frontend/src/app/components/download-card/download-card.component.html
+++ b/gui/frontend/src/app/components/download-card/download-card.component.html
@@ -18,7 +18,7 @@
       >
         <div class="progress-ring__inner">
           <div class="progress-ring__content">
-            <span *ngIf="showPauseIcon" class="material-icons progress-ring__icon">pause</span>
+            <span *ngIf="showPauseIcon" class="material-icons-outlined progress-ring__icon">pause</span>
             <span class="progress-ring__percent">{{ progressValue }}%</span>
           </div>
         </div>
