--- a/gui/frontend/src/app/app.component.html
+++ b/gui/frontend/src/app/app.component.html
@@ -37,11 +37,11 @@
         </div>
       </div>
       <div class="action-bar">
-        <button (click)="onFetchFiles()" class="fetch-btn">
+        <button (click)="onFetchFiles()" class="fetch-btn" [disabled]="!inputFilePath || !outputDirPath">
           <span class="material-icons-outlined">file_download</span>
           Fetch Files
         </button>
-        <button (click)="onCancelDownload()" class="fetch-btn cancel-btn">
+        <button (click)="onCancelDownload()" class="fetch-btn cancel-btn" [disabled]="!((overview$ | async)?.active)">
           <span class="material-icons-outlined">cancel</span>
           Cancel
         </button>
