--- a/gui/frontend/src/app/components/download-card/download-card.component.html
+++ b/gui/frontend/src/app/components/download-card/download-card.component.html
@@ -9,21 +9,32 @@
 
   <div class="card-body">
     <div class="progress-shell">
-      <div
-        class="progress-ring"
-        [style.--value]="progressValue"
-        [style.--accent]="accentColor"
-        [attr.aria-label]="progressLabel"
-        role="img"
-      >
-        <div class="progress-ring__inner">
-          <div class="progress-ring__content">
-            <span *ngIf="showPauseIcon" class="material-icons-outlined progress-ring__icon">pause</span>
-            <span class="progress-ring__percent">{{ progressValue }}%</span>
-          </div>
+      <ng-container *ngIf="series?.status === 'succeeded'; else activeSpinner">
+        <div class="complete-indicator" [style.--accent]="accentColor" role="img" aria-label="Completed">
+          <span class="material-icons-outlined">check_circle</span>
         </div>
+      </ng-container>
+      <ng-template #activeSpinner>
+        <div
+          class="spinner"
+          [style.--accent]="accentColor"
+          aria-live="polite"
+          role="img"
+        ></div>
+      </ng-template>
+      <div class="progress-caption">
+        <ng-container *ngIf="series?.bytesDownloaded as bd">
+          <ng-container *ngIf="series?.status === 'succeeded'; else showWithTotal">
+            <span>{{ bd | bytes }}</span>
+          </ng-container>
+          <ng-template #showWithTotal>
+            <span>{{ bd | bytes }}</span>
+            <ng-container *ngIf="series?.bytesTotal as bt">
+              <span> / {{ bt | bytes }}</span>
+            </ng-container>
+          </ng-template>
+        </ng-container>
       </div>
-      <div class="progress-caption">{{ statusLabel }}</div>
     </div>
 
     <div class="card-output">
