--- a/gui/frontend/src/app/components/manifest-download-card/manifest-download-card.component.html
+++ b/gui/frontend/src/app/components/manifest-download-card/manifest-download-card.component.html
@@ -9,19 +9,28 @@
 
   <div class="card-body">
     <div class="progress-shell">
-      <div
-        class="progress-ring"
-        [style.--value]="progressValue"
-        [attr.aria-label]="progressLabel"
-        role="img"
-      >
-        <div class="progress-ring__inner">
-          <div class="progress-ring__content">
-            <span class="progress-ring__percent">{{ progressValue }}%</span>
-          </div>
+      <ng-container *ngIf="isCompleted; else activeSpinner">
+        <div class="complete-indicator" role="img" aria-label="Completed">
+          <span class="material-icons-outlined">check_circle</span>
+        </div>
+      </ng-container>
+      <ng-template #activeSpinner>
+        <div class="spinner" aria-live="polite" role="img"></div>
+      </ng-template>
+      <div class="progress-caption">
+        <span>{{ statusLabel }}</span>
+        <div *ngIf="manifest?.bytesDownloaded as bd" class="bytes-line">
+          <ng-container *ngIf="isCompleted; else showWithTotal">
+            <span>{{ bd | bytes }}</span>
+          </ng-container>
+          <ng-template #showWithTotal>
+            <span>{{ bd | bytes }}</span>
+            <ng-container *ngIf="manifest?.bytesTotal as bt">
+              <span> / {{ bt | bytes }}</span>
+            </ng-container>
+          </ng-template>
         </div>
       </div>
-      <div class="progress-caption">{{ statusLabel }}</div>
     </div>
 
     <div class="card-output">
